update query sql and add telephone login api

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -17,6 +17,10 @@ EnableAdmin = true
 AdminAddr = "127.0.0.1"
 AdminPort = 8090
 
+copyrequestbody = true
+
+EnableGzip = true
+
 runmode = dev
 
 [dev]
