wechat api update

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -18,8 +18,12 @@ AdminAddr = "127.0.0.1"
 AdminPort = 8090
 
 copyrequestbody = true
-
 EnableGzip = true
+
+# wechat mini program
+WechatAppId = "wxcc67742dc83abf52"
+WechatSecret = "44a218da199570064f86e17aac6c4c8d"
+WechatGrantType = "authorization_code"
 
 runmode = dev
 
