--- a/conf/app.conf
+++ b/conf/app.conf
@@ -25,6 +25,9 @@ WechatAppId = "wxcc67742dc83abf52"
 WechatSecret = "44a218da199570064f86e17aac6c4c8d"
 WechatGrantType = "authorization_code"
 
+# AES secret (AES-128-CBC)
+AESSecretKey = "ECOMMERCE-SYSTEM"
+
 runmode = dev
 
 [dev]
