testing xsrf module, and fixed login defect

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -20,6 +20,11 @@ AdminPort = 8090
 copyrequestbody = true
 EnableGzip = true
 
+# xsrf
+# enablexsrf = true
+# xsrfkey = 61oETzKXQAGaYdkL5gEmGeJJFuYh7EQnp2XdTP1o
+# xsrfexpire = 60 * 60 * 1000
+
 # wechat mini program
 WechatAppId = "wxcc67742dc83abf52"
 WechatSecret = "44a218da199570064f86e17aac6c4c8d"
@@ -28,6 +33,7 @@ WechatGrantType = "authorization_code"
 # AES secret (AES-128-CBC)
 AESSecretKey = "ECOMMERCE-SYSTEM"
 
+# start env
 runmode = dev
 
 [dev]
