--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,7 +5,7 @@ EnableDocs = true
 EnableGzip = true
 
 redis_host = "127.0.0.1:6379"
-redis_db = "1"
+redis_db = 1
 redis_key = "ecommercesys"
 
 mysqluser = "root"
