add docker file

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,8 +1,16 @@
+httpaddr = "127.0.0.1"
 appname = ecommerce-sys
 autorender = true
 copyrequestbody = true
 EnableDocs = true
 EnableGzip = true
+AccessLogs = true
+
+ServerTimeOut = 30
+
+EnableAdmin = true
+AdminAddr = "127.0.0.1"
+AdminPort = 8090
 
 redis_host = "127.0.0.1:6379"
 redis_db = 1
@@ -13,10 +21,6 @@ mysqlpass = "Password1!"
 mysqlurls = "127.0.0.1"
 mysqldb   = "ecommercesys"
 mysqlport = 3306
-
-EnableAdmin = true
-AdminAddr = "127.0.0.1"
-AdminPort = 8090
 
 # xsrf
 # enablexsrf = true
